style.css
/* ... */
.html-preview h6 {
    font-size: 0.875rem;
    font-weight:700;
    color:var(--accent-color1);
    margin:1.24rem 0;
  }
.html-preview p, .html-preview li {
    font-size: 0.875rem;
    line-height:1.5rem;
    font-weight:400;
    color:var(--text-color2);
  }
.html-preview strong {
    font-weight:700;
  }
.markdown-input, .html-preview code {
    font-size: 0.875rem;
    line-height:1.55rem;
    font-family: var(--ff-mono);
    color:var(--text-color1);
    font-weight:400;
  }

/* Fix for long lines of code */
.html-preview code {
  word-break: break-word;
  white-space: pre-wrap;
  -moz-white-space: pre-wrap;      
}
.html-preview pre {
  width:100%; 
}
/* End - Fix for long lines of code */
.html-preview pre  {
  border-radius: 0.25rem;
  background: var(--background-color-200);
  padding:1.5rem;
  margin:1.25rem 0;
}
.html-preview ul, .html-preview ol {
  margin-left:0rem;
  padding:0.1rem 0 0 2.3rem;
}
.html-preview ul li, .html-preview ol li {
  margin-bottom:0.25rem;
  padding-left:0.45rem;
}
.html-preview ul ::marker {
  color: var(--accent-color1);
  font-size:0.55rem;
}
.html-preview blockquote {
  color:var(--text-color1);
  font-size: 0.875rem;
  line-height:1.5rem;
  font-weight: 700;
  margin-top:1.25rem;
  padding:1.5rem 1.5rem 1.5rem 1.3rem;
  border-radius:0.25rem;
  border-left:var(--border-accent);
  background: var(--background-color-200);
}
.html-preview blockquote p {
  font-size: 0.875rem;
  line-height:1.5rem;
  font-weight: 700;
  color:var(--text-color1);
}
.html-preview a {
  color:inherit;
}


#editor {
  display: flex;
  position: relative;
  /* min-height: calc(100vh - 4.8rem); */
  width:100%;
}

section.left, section.right {
  width: 50%;
}
section.right.full-screen {
  width:100%;
}
.markdown-input,
.html-preview {
  min-height: calc(100vh - 8rem);
  overflow-y: auto;
  background: var(--background-color-100);
}

.markdown-input {
  width:100%;
  padding:0.563rem 1rem;
  border: none;
  outline: none;
  resize: none;
}

.html-preview {
  padding: 0.1rem 1.45rem 1.375rem 1.45rem; 
  border-left: var(--border300);
}
.full-screen .html-preview {
  width:100%;
  max-width:42rem;
  margin:0 auto;
  border-left:0;
}

dialog {
  background: var(--background-color-100);
  border:0;
  border-radius:0.25rem;
  padding:1rem;
  max-width: min(21.438rem, calc(100% - 3rem)); /* To keep the margin to the sides on tablet screen */
}
dialog::backdrop {
  background: var(--backdrop);
  backdrop-filter: blur(0.2rem);
}
dialog h2{
  margin-bottom: 1rem;
  font-size:1.25rem;
  font-weight: 700;
  color:var(--text-color1);
  font-family: var(--ff-serif);
}
dialog p{
  font-size:0.875rem;
  line-height:1.5rem;
  font-weight: 400;
  color:var(--text-color2);
  font-family: var(--ff-serif);
}
dialog .btn-save {
  width:100%;
  margin-top:1rem;
}
.close-dialog-icon {
  width:1.5rem;
  height:1.5rem;
  border:0;
  outline: 0;
  border-radius: 0.125rem;
  padding:0.1rem;
  background-color:var(--backdrop);
  background-image:url(./assets/icon-close.svg);
  background-repeat: no-repeat;
  background-size: 1rem;
  background-position: center;
  cursor:pointer;
  float:right;
  transition: background 0.5s;
}
.close-dialog-icon:hover {
  background-color:var(--accent-color2);
}


footer{
    width:100%;
    margin-top:3.6rem;
    padding-bottom:2rem;
    text-align: center;
    font-size:0.8rem;
    color: var(--text-color2);
  }
footer a {
    color: var(--text-color2);
  }

  @media screen and (max-width:60rem) {
    body {
      overflow-x: hidden;
    }
    
    #side-nav {
      position: absolute;
      left:0;
      top:0;
      z-index: 2;
      min-height: 100vh;
    }
    .btn-menu[aria-expanded="true"] {
      position:absolute;
      z-index: 3;
      left:11.125rem;
    }
    .btn-save#save-changes {
      width:2.5rem;
      min-width:2.5rem; /* fix for Safari */
    }
    .btn-save#save-changes svg {
      width:1.063rem;
      height:1.063rem;
    }
    /* Hiding button text on mobile devises */
    .btn-save#save-changes span{
      position:absolute;
      display:inline-block;
      height:1px;
      width:1px;
      /* overflow: hidden; */
      clip: rect(1px 1px 1px 1px); /* IE 7+ only support clip without commas */
      clip: rect(1px, 1px, 1px, 1px); /* All other browsers */
    }
    .top-bar-left {
      gap:0.5rem;
    }
    .label-doc-name {
      padding-left:1.5rem;
      background: url(./assets/icon-document.svg) no-repeat left center;
      border-left:none;
    }
    section.left, section.right {
      width:100%;
    }
    #editor{
      display:block;
    }
    .left {
      min-height:fit-content;
      display: block;
      overflow-y: visible;
    }
    .markdown-input{
      max-width:90%;
      height:100%;
      display: block;
      min-height:fit-content;
    }
    
  }

